{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 486,
  "lineage": "c01d7cdc-770c-384a-c558-e02cdd4be667",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_instance",
      "name": "vm_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240801",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/disks/vm-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dxc-project-1234/zones/us-central1-a/instances/vm-app",
            "instance_id": "4615928040460517844",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "mouad:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKt+5n3TlxULoqA590LJ3k6metuTl8XN4mUNJW/IQl7H mouad@ubuntu\n"
            },
            "metadata_fingerprint": "eIv1_am06sg=",
            "name": "vm-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.27.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
                "subnetwork_project": "dxc-project-1234"
              }
            ],
            "project": "dxc-project-1234",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/instances/vm-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app"
            ],
            "tags_fingerprint": "-ITvvbWD_xo=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_instance",
      "name": "vm_tooling",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240801",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/disks/vm-tooling"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dxc-project-1234/zones/us-central1-a/instances/vm-tooling",
            "instance_id": "1597771542793159125",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "ssh-keys": "mouad:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKt+5n3TlxULoqA590LJ3k6metuTl8XN4mUNJW/IQl7H mouad@ubuntu\n"
            },
            "metadata_fingerprint": "eIv1_am06sg=",
            "name": "vm-tooling",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.205.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
                "subnetwork_project": "dxc-project-1234"
              }
            ],
            "project": "dxc-project-1234",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/instances/vm-tooling",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tooling"
            ],
            "tags_fingerprint": "xwQwNnZUVkg=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-22T15:43:54.252-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dxc-project-1234/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
            "priority": 1000,
            "project": "dxc-project-1234",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "2379",
                  "2380",
                  "10250",
                  "10255",
                  "10252",
                  "10251",
                  "10049",
                  "30000-32767",
                  "80",
                  "443",
                  "8080",
                  "10443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-22T15:43:54.240-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dxc-project-1234/global/firewalls/kubernetes-ports",
            "log_config": [],
            "name": "kubernetes-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
            "priority": 1000,
            "project": "dxc-project-1234",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/firewalls/kubernetes-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240801",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/disks/vm-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dxc-project-1234/zones/us-central1-a/instances/vm-app",
            "instance_id": "4615928040460517844",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "mouad:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKt+5n3TlxULoqA590LJ3k6metuTl8XN4mUNJW/IQl7H mouad@ubuntu\n"
            },
            "metadata_fingerprint": "eIv1_am06sg=",
            "name": "vm-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.27.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
                "subnetwork_project": "dxc-project-1234"
              }
            ],
            "project": "dxc-project-1234",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/instances/vm-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app"
            ],
            "tags_fingerprint": "-ITvvbWD_xo=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_tooling",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240801",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/disks/vm-tooling"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dxc-project-1234/zones/us-central1-a/instances/vm-tooling",
            "instance_id": "1597771542793159125",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata": {
              "ssh-keys": "mouad:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKt+5n3TlxULoqA590LJ3k6metuTl8XN4mUNJW/IQl7H mouad@ubuntu\n"
            },
            "metadata_fingerprint": "eIv1_am06sg=",
            "name": "vm-tooling",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.205.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
                "subnetwork_project": "dxc-project-1234"
              }
            ],
            "project": "dxc-project-1234",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/zones/us-central1-a/instances/vm-tooling",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tooling"
            ],
            "tags_fingerprint": "xwQwNnZUVkg=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dxc-project-1234/global/networks/my-app-network",
            "mtu": 0,
            "name": "my-app-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2004149640259830257",
            "project": "dxc-project-1234",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-22T15:43:55.005-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/global/networks/my-app-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dxc-project-1234",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dxc-project-1234/regions/us-central1/subnetworks/my-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}